parallax effect adjustment

--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ img.logo-rodape {
     }
 
     section#paralax {
-        background-attachment: fixed;
+        background-attachment: scroll;
         background-size: cover;
     }
 
@@ -485,7 +485,6 @@ img.logo-rodape {
         height: 800px;
         width: 100vw;
     } */
-
 
 
 
