--- a/style.css
+++ b/style.css
@@ -638,8 +638,9 @@ p.tres {
 @media (max-width: 768px) {
 #quem-somos {
     background-position: right, center;
-    /* background-attachment: fixed; */
+    background-attachment: fixed;
     background-size: cover;
+    width: 100%;
 }
 
 /* p.um, p.dois, p.tres {
