--- a/style.css
+++ b/style.css
@@ -182,6 +182,8 @@ section#paralax {
 }
 
 section.natureza {
+    display: flex;
+    align-items: center;
     background-size: cover;
     background-attachment: fixed;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.489);
@@ -197,7 +199,6 @@ section.natureza p {
     background-color: rgba(0, 0, 0, 0.245);
     width: 500px;
     padding: 20px 20px 20px 20px;
-    margin-top: 110px;
     margin-left: 30px;
 }
 
@@ -486,8 +487,8 @@ img.logo-rodape {
     }
 
     section.natureza p {
-        width: 80vw;
-        margin-top: 150px;
+        width: 70vw;
+        /* margin-top: 150px; */
         padding: 20px;
         font-family: 'Open Sans', sans-serif;
         font-size: 1.5em;
@@ -599,6 +600,7 @@ img.logo-rodape {
 #quem-somos {
     background: #FFFFFF url('./imagens/quemsomos.jpg') center center no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 h3 {
@@ -643,6 +645,8 @@ p.tres {
 @media (max-width: 768px) {
 #quem-somos {
     background-position: right, center;
+    background-attachment: scroll;
+    bac
 }
 
 /* p.um, p.dois, p.tres {
