--- a/style.css
+++ b/style.css
@@ -433,6 +433,7 @@ img.logo-rodape {
         text-transform: uppercase;
         color: var(--cor0);
         width: 180px;
+        line-height: 3.5;
     }
 
     ul.nav-list {
